# hil-serl-rubetek

./: .gitignore  .gitmodules  Camera.py  Env_test.py  Env_test_fake.py  Haptic_test.py  LowLevelCtrl.py  README.md  RealRobotEnv.py  Robot.py  RobotAdapter.py  RobotConfig.py  build_classifier_data.py  pyproject.toml  temp.py
API/: controller.py
API/source/ap_interface/motion/: joint_motion.py  linear_motion.py  motion_host.py
API/source/core/network/: controller_socket.py
API/source/features/: state_handler.py
examples/: record_demos.py  record_success_fail.py  train_bc.py  train_hgdagger.py  train_reward_classifier.py  train_rlpd.py
examples/experiments/: mappings.py
examples/experiments/rozum_push/: Camera.py  FakeRobotEnv.py  RealRobotEnv.py  RobotAdapter.py  RozumConfig.py  VisualReward.py
experiments/: __init__.py
serl_launcher/: requirements.txt
serl_launcher/serl_launcher/common/: encoding.py
serl_robot_infra/: README.md
